2000-02-16  Alexandre Oliva  <oliva@lsd.ic.unicamp.br>

	* cpplib.c (do_line): Pedwarn for #line > 32767.

	* c-lex.c (readescape): Warn about '\x', but do not reject it.

2000-02-15  Jonathan Larmour  <jlarmour@redhat.co.uk>

	* gcc.c (default_compilers): Add new __GNUC_PATCHLEVEL__ define
	to default cpp spec.
	(do_spec_1): Add support for %v3 spec used by __GNUC_PATCHLEVEL__.
	* cpp.texi: Document __GNUC_PATCHLEVEL__.
	* cpp.1: Likewise.

	* objc/lang-specs.h: Add new __GNUC_PATCHLEVEL__ define to
	default spec.

2000-02-15  Denis Chertykov  <denisc@overta.ru>

	* configure.in: Add support for avr target.

Wed Feb 16 03:21:43 2000  J"orn Rennecke <amylaar@cygnus.co.uk>

	* sh.h (OVERRIDE_OPTIONS): Don't set sh_addr_diff_vec_mode.
	(sh_addr_diff_vec_mode): Don't declare.
	* sh.c (sh_addr_diff_vec_mode): Delete.

Wed Feb 16 01:27:52 2000  J"orn Rennecke <amylaar@cygnus.co.uk>

	* sh.md (mulsi3_highpart): Add REG_EQUAL note to last insn.

Wed Feb 16 00:58:06 2000  J"orn Rennecke <amylaar@cygnus.co.uk>

	* sh.md (udivsi3_i1, divsi3_i1, umulhisi3_i, mulhisi3_i): Name.
	(smulsi3_highpart_i): Name.
	(udivsi3): Wrap emitted insns in REG_LIBCALL / REG_RETVAL notes.
	(divsi3, mulhisi3, umulhisi3, mulsidi3, umulsidi3): Likewise.
	(smulsi3_highpart, umulsi3_highpart): Likewise.

	(mulsidi3_i, umulsidi3_i): Make rtl describe operation
	correctly independent of endianness.
	(mulsidi3, umulsidi3): Now define_insn.  Hide details that
	confuse the optimizers.
	(mulsidi3+1, umulsidi3+1): New define_split.

Tue Feb 15 23:22:26 2000  Andrew Haley  <aph@cygnus.com>

	* config/sh/sh.md: Guard insn splits against illegal registers.
	* config/sh/sh.h: Correct comment about macros.

Tue Feb 15 22:30:36 2000  J"orn Rennecke <amylaar@cygnus.co.uk>
	                  Andrew MacLeod  <amacleod@cygnus.com>

	* Makefile.in (lcm.o): Depend on insn-attr.h.
	* basic-block.h (optimize_mode_switching): Declare.
	* lcm.c (tm_p.h, insn-attr.h): #include.
	(seginfo, bb_info): New structs.